Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-19072

Don't crash in proc_lnet_nis() is ni_status is NULL

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

      When reading LNet tunables, ni_status can be NULL. This triggers an LASSERT() rather than gracefully handling it. Instead, don't crash. Remove the LASSERT().

      lnet_ni_get_status_locked() already handles a NULL ni_status. While it's questionable whether ni_status == NULL should be LNET_NI_STATUS_UP or LNET_NI_STATUS_DOWN, it definitely should not crash.

            timday Tim Day
            timday Tim Day
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: